test/syntax-errors/problem3.js
var expect = require('chai').expect;

var f = require('../../src/syntax-errors/problem3.js');

console.log("Everything OK!");